# silero-rs

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs  parallel.rs  silero.rs  utils.rs
